--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : "google" #, "google-universal", "custom"
   google:
     tracking_id          : "UA-48257764-2"
 
