--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,17 @@
-# main links
+# main links links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "归档"
+    url: /year-archive/
+
+  - title: "分类"
+    url: /categories/
+
+  - title: "友链"
+    url: /links/
+
+  - title: "感悟"
+    url: /think/
+
+  - title: "关于"
+    url: /about/
+
